--- a/angular.json
+++ b/angular.json
@@ -27,9 +27,12 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.less"
+              "src/styles.less",
+              "node_modules/swiper/dist/css/swiper.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "node_modules/swiper/dist/js/swiper.min.js"
+            ]
           },
           "configurations": {
             "production": {
