--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,17 @@
             "tsConfig": "src/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "./node_modules/@ant-design/icons-angular/src/inline-svg/",
+                "output": "/assets/"
+              }
             ],
             "styles": [
               "src/styles.less",
-              "node_modules/swiper/dist/css/swiper.min.css"
+              "node_modules/swiper/dist/css/swiper.min.css",
+              "node_modules/ng-zorro-antd/ng-zorro-antd.min.css"
             ],
             "scripts": [
               "node_modules/swiper/dist/js/swiper.min.js"
