--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --aot --sourceMap=false ",
+    "build": "ng build --prod --aot --sourceMap=false ",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
